# qtvirtualkeyboard

./: .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  README.md  conanfile.py  configure.json  dependencies.yaml  header.GPL  licenseRule.json  qt_cmdline.cmake  qtvirtualkeyboard.pro  sync.profile  virtualkeyboard.pro  virtualkeyboard.qdoc
demo/: demo.pro  (+4 more)
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/cerence/: CMakeLists.txt  unpack.py
src/plugins/cerence/cerence-hwr/: CMakeLists.txt
src/plugins/cerence/cerence-hwr/plugin/: CMakeLists.txt  cerence_hwr.json  cerence_hwr_p.h  qtvirtualkeyboardcerencehwrplugin.cpp  qtvirtualkeyboardcerencehwrplugin.h  t9writeabstractdictionary_p.h  t9writedictionary.cpp  t9writedictionary_p.h  t9writeinputmethod.cpp  t9writeinputmethod_p.h  t9writewordcandidate.cpp  t9writewordcandidate_p.h  t9writeworker.cpp  t9writeworker_p.h
src/plugins/cerence/cerence-hwr/plugin/content/layouts/zh_HK/: handwriting.qml
src/plugins/cerence/cerencecommon/: CMakeLists.txt  xt9dbfile.cpp  xt9dbfile.h  xt9ldbmanager.cpp  xt9ldbmanager.h
src/plugins/cerence/hwr/: CMakeLists.txt
src/plugins/cerence/hwr/plugin/: CMakeLists.txt  cerence_hwr_p.h  t9writeabstractdictionary_p.h  t9writedictionary.cpp  t9writedictionary_p.h  t9writeinputmethod.cpp  t9writeinputmethod_p.h  t9writewordcandidate.cpp  t9writewordcandidate_p.h  t9writeworker.cpp  t9writeworker_p.h
src/plugins/cerence/hwr/plugin/content/layouts/zh_HK/: handwriting.qml
src/plugins/cerence/xt9/: CMakeLists.txt
src/plugins/cerence/xt9/plugin/: CMakeLists.txt  cerence_xt9.json  xt9awinputmethod.cpp  xt9awinputmethod_p.h  xt9awinputmethodprivate.cpp  xt9awinputmethodprivate_p.h  xt9cpinputmethod.cpp  xt9cpinputmethod_p.h  xt9cpinputmethodprivate.cpp  xt9cpinputmethodprivate_p.h  xt9inputmethod.cpp  xt9inputmethod_p.h  xt9inputmethodprivate.cpp  xt9inputmethodprivate_p.h  xt9jinputmethod.cpp  xt9jinputmethod_p.h  xt9jinputmethodprivate.cpp  xt9jinputmethodprivate_p.h  xt9kinputmethod.cpp  xt9kinputmethod_p.h  xt9kinputmethodprivate.cpp  xt9kinputmethodprivate_p.h  xt9plugin.cpp  xt9plugin.h  xt9thaiinputmethod.cpp  xt9thaiinputmethod_p.h  xt9thaiinputmethodprivate.cpp  xt9thaiinputmethodprivate_p.h
src/plugins/cerence/xt9/xt9common/: CMakeLists.txt  xt9awime.cpp  xt9awime.h  xt9callbacks.h  xt9cpime.cpp  xt9cpime.h  xt9ime.cpp  xt9ime.h  xt9jime.cpp  xt9jime.h  xt9kdb.cpp  xt9kdb.h  xt9kdbarea.cpp  xt9kdbarea.h  xt9kdbelement.cpp  xt9kdbelement.h  xt9kdbkey.cpp  xt9kdbkey.h  xt9kdblayout.cpp  xt9kdblayout.h  xt9keyboardgenerator.cpp  xt9keyboardgenerator.h  xt9kime.cpp  xt9kime.h  xt9languagemap.cpp  xt9languagemap.h
src/plugins/example/: CMakeLists.txt
src/plugins/example/hwr/: CMakeLists.txt  examplehwrinputmethod.cpp  examplehwrinputmethod_p.h
src/plugins/hangul/: .prev_CMakeLists.txt  CMakeLists.txt  hangul.cpp  hangul.pro  hangul_p.h  hangulinputmethod.cpp  hangulinputmethod_p.h  hangulplugin.cpp  hangulplugin.h
src/plugins/hunspell/: CMakeLists.txt  hunspell.pro
src/plugins/hunspell/hunspellinputmethod/: .prev_CMakeLists.txt  CMakeLists.txt  hunspellinputmethod.cpp  hunspellinputmethod.pro  hunspellinputmethod_p.cpp  hunspellinputmethod_p.h  hunspellinputmethod_p_p.h  hunspellwordlist.cpp  hunspellworker.cpp  hunspellworker_p.h  qhunspellinputmethod_global.h
src/plugins/hunspell/module/: CMakeLists.txt  hunspellinputmethod.cpp  hunspellinputmethod_p.cpp  hunspellinputmethod_p.h  hunspellinputmethod_p_p.h  hunspellwordlist.cpp  hunspellwordlist_p.h  hunspellworker.cpp  hunspellworker_p.h  qhunspellinputmethod_global.h
src/plugins/hunspell/plugin/: CMakeLists.txt  hunspellplugin.cpp  hunspellplugin.h  plugin.pro
src/plugins/lipi-toolkit/: CMakeLists.txt
src/plugins/lipi-toolkit/plugin/: .prev_CMakeLists.txt  CMakeLists.txt  lipiinputmethod.cpp  lipiinputmethod_p.h  lipiplugin.cpp  lipiplugin.h  lipisharedrecognizer.cpp  lipisharedrecognizer_p.h  lipiworker.cpp  lipiworker_p.h  plugin.pro
src/plugins/myscript/: CMakeLists.txt
src/plugins/myscript/plugin/: .prev_CMakeLists.txt  CMakeLists.txt  myscriptinputmethod.cpp  myscriptinputmethod_p.h  myscriptinputmethod_p_p.h  myscriptplugin.cpp  myscriptplugin.h  plugin.pro
src/plugins/openwnn/: CMakeLists.txt  openwnn.pro  openwnninputmethod.cpp  openwnninputmethod_p.h
src/plugins/openwnn/plugin/: .prev_CMakeLists.txt  CMakeLists.txt  openwnninputmethod.cpp  openwnninputmethod_p.h  openwnnplugin.cpp  openwnnplugin.h  plugin.pro
src/plugins/pinyin/: CMakeLists.txt  pinyindecoderservice.cpp  pinyindecoderservice_p.h  pinyininputmethod.cpp  pinyininputmethod_p.h
src/plugins/pinyin/plugin/: .prev_CMakeLists.txt  CMakeLists.txt  pinyindecoderservice.cpp  pinyindecoderservice_p.h  pinyininputmethod.cpp  pinyininputmethod_p.h  pinyinplugin.cpp  pinyinplugin.h  plugin.pro
src/plugins/t9write/: CMakeLists.txt
src/plugins/t9write/plugin/: CMakeLists.txt  plugin.pro  t9write_p.h  t9writedictionary.cpp  t9writedictionary_p.h  t9writeinputmethod.cpp  t9writeinputmethod_p.h  t9writeplugin.cpp  t9writeplugin.h  t9writeworker.cpp  t9writeworker_p.h
src/plugins/tcime/: CMakeLists.txt  tcinputmethod.cpp  tcinputmethod_p.h
src/plugins/tcime/plugin/: .prev_CMakeLists.txt  CMakeLists.txt  plugin.pro  tcimeplugin.cpp  tcimeplugin.h  tcinputmethod.cpp  tcinputmethod_p.h
src/plugins/thai/: CMakeLists.txt  thaiinputmethod.cpp  thaiinputmethod_p.h
src/plugins/thai/plugin/: .prev_CMakeLists.txt  CMakeLists.txt  plugin.pro  thaiinputmethod.cpp  thaiinputmethod_p.h  thaiplugin.cpp  thaiplugin.h
src/styles/: CMakeLists.txt  KeyIcon.qml  KeyPanel.qml  KeyboardStyle.qml  SelectionListItem.qml  TraceCanvas.qml  TraceInputKeyPanel.qml  TraceUtils.js  plugins.qmltypes  qtquickvirtualkeyboardstylesplugin.cpp  qtquickvirtualkeyboardstylesplugin.h  styles.pro  styles_plugin.h  svgimageprovider.cpp  svgimageprovider.h
src/styles/builtin/: CMakeLists.txt  qtquickvirtualkeyboardbstylesbuiltinplugin.cpp  qtquickvirtualkeyboardbstylesbuiltinplugin.h
src/styles/builtin/default/: style.qml
src/styles/builtin/retro/: style.qml
(+743 files in other folders)
